[fix] change the title

--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>检测结果 - 视频音量突增检测</title>
+    <title>检测结果</title>
     <link rel="icon" type="image/x-icon" href="/audio-detect/static/audio.ico">
     <style>
       body { 
@@ -73,7 +73,7 @@
     </style>
   </head>
   <body>
-    <h1>检测结果</h1>
+    <h1>🎉检测结果🎉</h1>
     <div class="dashed-box">
       <p>源视频：<strong>{{video}}</strong></p>
       {% if error %}
