--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>视频音量突增检测</h1>
+    <h1>视频音量突增检测-可检测噪音</h1>
     <div id="uploadForm" class="dashed-box">
         <form action="/audio-detect/upload" method="post" enctype="multipart/form-data" onsubmit="return handleSubmit(event)">
             <div class="form-group">
